--- a/style.css
+++ b/style.css
@@ -1,65 +1,80 @@
 :root{
-    --bg-color: #DDDDDD;
-    --secondary-color: #F05454;
-    --font: "Nunito Sans", sans-serif;
+    --bg-color:#222831;
+   --primary-color:#DDDDDD;
+   --secundary-color:#F05454;
+   --font:"Nuito Sans",sans-serif:;
+
 }
+
 body{
-    background-color: var(--bg-color);
+    background-color:var(--bg-color) ;
     color: var(--primary-color);
-    font-family: var(--font);
+    font-family:var(--font) ;
     height: 100vh;
-    margin: 0;
+    margin:0;
 }
-header{
+header{ 
     background-color:
-    var(--primary-color);
-    text-align: center;
-    padding: 1px;
-}
+     var(--primary-color);
+        text-align: center;
+         padding: 1px; ;
+    }
+
 h1{
-    font-size: 2rem;
-    color: var(--bg-color);
-    font-weight: 700;
+   font-size:2rem;
+   color:var(--bg-color) ;
+    font-family: 700;
+     
 }
+
 nav{
-    display: flex;
+   display: flex;
     justify-content: center;
     font-weight: 400;
+
 }
+
 nav a{
     text-decoration: none;
     color: var(--bg-color);
-    margin: 0 2rem 1rem 0rem;
-    font-size: 1.2rem;
+    margin:0 2rem 1rem 0rem;
+    font: size 1.2em; ;
 }
-nav a:hover{
-    text-decoration: underline;
-    transform: scale(0.90);
-    transition: transform 0.1s;
-}
+
+ nav a:hover{
+     text-decoration: none;
+     transform: scale(0.90);
+    transition:teansform 0.1s ;
+ }
+
 .graficos-container{
-    margin: 5rem;
+  margin:5rem;
+}  
+
+ .grafico{
+ margin-top:3rem
+
 }
-.grafico{
-    margin-top: 3rem;
-}
+    
 .graficos-container_texto{
     font-size: 1.3rem;
-    text-align: center;
-    padding: 2rem;
-    border: var(--secondary-color) solid 2px;
-}
-span{
-    font-weight: bold;
-    color: var(--secondary-color);
-}
-footer{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--primary-color);
-    color: var(--bg-color);
-    width: 100%;
-    height: 3rem;
-    margin-top: 2rem;
-}
+   text-align: center;
+   padding: 2rem;
+   border: var(--secundary-color)solid 2px;}
+
+   span{
+       font-weight: bold;
+        color:var(--secundary-color);
+       }
+    
+    footer{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color:
+        var(--primary-color);
+        color: var(--bg-color);
+        width: 100%;
+        height: 3rem;
+        margin: top 2rem; ;
+        }
